--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ php:
 install:
   - travis_retry composer install --no-interaction --prefer-dist
 script:
-  - composer run test
+  - composer run tests
