--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
   "name": "davpsh/php-pathinfo-tests",
+  "require-dev": {
+    "phpunit/phpunit": "^8.5"
+  },
   "autoload": {
     "psr-4": {
       "Example\\": "src/"
